crates/kirin-derive-core/src/kirin/builder/snapshots/kirin_derive_core_3__kirin__builder__tests__regular_named_struct.snap
---
source: crates/kirin-derive-core-3/src/kirin/builder/mod.rs
expression: "Builder::default().print(&input)"
---
impl<T: CompileTimeValue + Typeof<L>, L: TypeLattice> Constant<T, L> {
    pub fn new<Lang>(
        context: &mut ::kirin::ir::Context<Lang>,
        value: impl Into<T>,
    ) -> constant_build_result::Constant
    where
        Lang: ::kirin::ir::Dialect + From<Constant<T, L>>,
        Lang::TypeLattice: From<L>,
    {
        let constant_statement_id = context.statement_arena().next_id();
        let value: T = value.into();
        let marker: std::marker::PhantomData<L> = std::marker::PhantomData;
        let result: ResultValue = context
            .ssa()
            .kind(SSAKind::Result(constant_statement_id, 0usize))
            .ty(Lang::TypeLattice::from(value.type_of()))
            .new()
            .into();
        context
            .statement()
            .definition(Self {
                value,
                result,
                marker,
            })
            .new();
        constant_build_result::Constant {
            id: constant_statement_id,
            result,
        }
    }
}
pub mod constant_build_result {
    use kirin::ir::{ResultValue, Statement};
    pub struct Constant {
        pub id: Statement,
        pub result: ResultValue,
    }
    impl From<Constant> for Statement {
        fn from(value: Constant) -> Self {
            value.id
        }
    }
}
